--- a/finance/src/main/resources/application.properties
+++ b/finance/src/main/resources/application.properties
@@ -3,10 +3,14 @@ spring.application.name=finance
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/finance
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance2
 spring.datasource.username=postgres
 spring.datasource.password=system
 spring.jpa.hibernate.ddl-auto=none
 
 # AI21 Configuration
 ai21.api.key=qR34CeEv3ZxjnwgaKQdVH5iJnaYxhnow
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
