--- a/finance/src/main/resources/application.properties
+++ b/finance/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=finance
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/finance2
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance
 spring.datasource.username=postgres
 spring.datasource.password=240104
 spring.jpa.hibernate.ddl-auto=none
@@ -11,6 +11,9 @@ spring.jpa.hibernate.ddl-auto=none
 # AI21 Configuration
 ai21.api.key=qR34CeEv3ZxjnwgaKQdVH5iJnaYxhnow
 
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.web=DEBUG
