--- a/finance/src/main/resources/application.properties
+++ b/finance/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/finance2
 spring.datasource.username=postgres
-spring.datasource.password=240104
+spring.datasource.password=system
 spring.jpa.hibernate.ddl-auto=none
 
 # AI21 Configuration
